# pure-ab-3d-mot

./: .bumpversion.toml  .coveragerc  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: unittest.yml
src/pure_ab_3d_mot/: __init__.py  box.py  clavia_conventions.py  dist_metrics.py  iou.py  kalman_filter.py  kitti_oxts.py  matching.py  model.py  orientation_correction.py  process_dets.py  str_const.py  target.py  tracker.py
test/: test_box.py  test_process_dets.py  test_run_nu_scenes_1_757.py  test_target.py
test/iou/: conftest.py  test_compute_inter_2d.py  test_convex_hull_intersection.py  test_polygon_clip.py
test/matching/affinity/: conftest.py  test_dist_2d.py  test_dist_3d.py  test_dist_3d_ry_xyz.py  test_euler.py  test_giou_2d.py  test_giou_3d.py  test_iou_2d.py  test_iou_3d.py  test_mahalanobis.py
test/matching/data_association/: conftest.py  test_basics.py  test_hungarian.py  test_large_threshold.py  test_mahalanobis.py  test_unknown_matching.py  test_unmatched_tracks.py
test/test_dist_metrics/: test_diff_orientation_correction.py
test/tracker/: conftest.py  test_birth.py
test/tracker/birth_and_update/: conftest.py  test_birth.py  test_update.py
test/tracker/prediction/: test_first_det.py  test_second_det.py
test/tracker/track/: test_first_det.py  test_no_detections.py  test_second_det.py
tests/: test_model_init.py
