[project]
name = "pure-ab-3d-mot"
version = "0.1.0"
description = "The gist of the AB3DMOT (a base-line of 3D multiple-object tracking)."
readme = "README.md"
authors = [
    { name = "Xinshuo Weng", email = "xinshuo.weng@gmail.com" }
]
maintainers = [
    { name = "Peter Koval", email = "koval.peter@gmail.com" }
]

requires-python = ">=3.8"
dependencies = [
    "filterpy>=1.4.5",
    "scipy>=1.10.1",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "bump-my-version>=1.2.1; python_version < '3.14'",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.12",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
